fix: material autocomplete overlap

--- a/src/components/composition/Layout/Layout.css
+++ b/src/components/composition/Layout/Layout.css
@@ -77,7 +77,7 @@ locator-layout {
     grid-area: header;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: var(--layer-two);
   }
 
   &::part(main) {
